@@ -1,3 +1,8 @@
+2020-04-13  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/94588
+	* g++.dg/diagnostic/redeclaration-1.C: Add dg-message.
+
 2020-04-13  Martin Sebor  <msebor@redhat.com>
 
 	PR c/92326
